--- a/17.1_activities/17.1_unsolved/My_Favorite_Musician/index.html
+++ b/17.1_activities/17.1_unsolved/My_Favorite_Musician/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mick Jagger - The greatest rocker. EVER.</title>
+  <title>Rihanna</title>
 </head>
+<link rel="stylesheet" href= "stylesheet.css">
 <!-- Add link tag below -->
 
 <body>
@@ -20,18 +21,17 @@ Instructions:
 - If you have time add more photos of your favorite musician. Make sure you uncomment the <h2> tag on line 26.
 
 -->
-<img src="MickJagger_1.jpg">
-
+<img src="rihanna.jpg">
 <ol>
-  <h1>Mick Jagger:</h1> <!-- Notice how lists can contain other html elements like the <h1> tag. Our list now has a title! -->
-  <li>Born: July 26, 1943 (age 75 years), Dartford, United Kingdom</li>
-  <li>Height: 5′ 10″</li>
-  <li>Band: The Rolling Stones</li>
-  <p>
-    Mick Jagger is one of the most recognisable and influential British musicians of the modern era. As lead singer and songwriter for The Rolling Stones, a prolific and much sought-after collaborator, a successful producer and a lauded solo artist in his own right, Mick has set and maintained the gold standard for popular performance and creativity for nearly five decades.
-  </p> <!-- Lists can contain paragraph tags to! -->
+
+  <h1>Rihanna</h1>  <!-- Notice how lists can contain other html elements like the <h1> tag. Our list now has a title! -->
+  <p>Singer • Songwriter • Actress • Business Woman</p>
+  <li>Born February 20th 1988</li>
+  <li>Diamonds</li>
+  <!-- Lists can contain paragraph tags to! -->
 </ol>
 
+<ul> Let go of the things that make you feel dead! Life is worth living!</ul>
 <!--
 Add your <ul> or <ul> with quote from your favorite musician below
 -->
