--- a/17.1_activities/17.1_unsolved/MyFirstHTML/MyFirstHTML-01.html
+++ b/17.1_activities/17.1_unsolved/MyFirstHTML/MyFirstHTML-01.html
@@ -5,13 +5,26 @@
 <html> <!-- The <html> tag is the root element of an HTML page -->
   
 <head> <!-- The <head> tag contains meta information about the document -->
-	<title>Page Title</title> <!-- <title> element specifies a title for the document -->
+	<title>Tracy Akufo</title> <!-- <title> element specifies a title for the document -->
 </head>
 
 <body> <!-- The <body> tag contains the visible page content -->
 
-  <h1>My First HeadingT</h1> <!-- The <h1> tag defines a large heading -->
-  <p>My first paragraph.</p> <!-- The <p> tag defines a paragraph -->
+  <h1>Hi there! My name is Tracy.</h1> <!-- The <h1> tag defines a large heading -->
+  <h2>This is an H2</h2>
+  <h3>This is an H3</h3>
+  <h4>This is an H4</h4>
+  <h5>This is H5</h5>
+  <h6>This is H6</h6>
+
+  <p>I'm learning how to code.</p> <!-- The <p> tag defines a paragraph -->
+
+  <ul>
+    <li>red</li>
+    <li>white</li>
+    <li>blue</li>
+  </ul>  
+
   <a href="https://www.google.com">Hi, I'm a link! I take you to other places on the web</a>
 
 </body>
