--- a/17.2-activities/01_Containers_Structure/unsolved/index.html
+++ b/17.2-activities/01_Containers_Structure/unsolved/index.html
@@ -4,14 +4,118 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
 <!-- Header section here -->
+<section class="header">
 
+</section>
 <!-- Color Palette section -->
+<section class="colorPalette">
+  <h1 id="pageTopic"> UPS Style Guide</h1>
+  <h2 class="section-head">Primary Colors</h2>
 
+  <div class="colorContainer">
+    <div class="swatch darkblue"></div>
+    <div class="hex-code">#333366</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch darkgrey"></div>
+    <div class="hex-code">#5454545</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch lightgrey"></div>
+    <div class="hex-code">#E3E3E3</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch white"></div>
+    <div class="hex-code">#FFFFFF</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch lightblue"></div>
+    <div class="hex-code">#13A0F6</div>
+  </div>
+
+  <h2 class="sectionHead">Alert Colors</h2>
+
+  <div class="colorContainer">
+    <div class="swatch red"></div>
+    <div class="hex-code">#F84848</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch orange"></div>
+    <div class="hex-code">#FC7705</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch lightblue"></div>
+    <div class="hex-code">#13A0F6</div>
+  </div>
+
+  <div class="colorContainer">
+    <div class="swatch lightgreen"></div>
+    <div class="hex-code">#8ABE48</div>
+  </div>
+</section>
 <!-- Typography Section -->
+<section class="typography">
+<h2 class="sectionHead">Typography</h2>
+<p>Open Sans</p>
+<div class="type_container">
+  <p class="large-light">Aa</p>
+  <p class="large-light">Light</p>
+</div>
+
+<div class="type_container">
+  <p class="regular">Aa</p>
+  <p class="regular">Regular</p>
+</div>
+
+<div class="type_container">
+  <p class="bold">Aa</p>
+  <p class="bold">Bold</p>
+</div>
+
+<h1>H1 - Open Sans Extrabold - size 50px <br> Line height 70px</h1>
+
+<h2>H2 - Open Sans Bold - size 42px <br> Line height 60px</h2>
+
+<h3>H3 - Open Sans Bold - size 34px <br> Line height 50px</h3>
+
+<h4>"d"</h4>
+</section>
+</section>
 
 <!-- UI Elements Section -->
+<section class="uiElements">
+<h2 class="sectionHead">UI Elements</h2>
+<p>Button</p>
+<div class="buttonContain"></div>
+  <div class="button primary">Primary</div>
+  <div class="button success">Success</div>
+  <div class="button danger">Danger</div>
+  <div class="button warning">Warning</div>
+  <div class="button info">Info</div>
 
+<div class="buttonContain"></div>
+  <div class="button primaryActive">Primary Active</div>
+  <div class="button successActive">Success Active</div>
+  <div class="button dangerActive">Danger Active</div>
+  <div class="button warningActive">Warning Active</div>
+  <div class="button infoActive">Info Active</div>
+</section>
 <!-- Imagery Section -->
+<section class="imagery">
+<h2 class="sectionHead">Logo</h2>
+<img src="images/Logo-dark.png">
+<img src="images/Logo-light.png">
+<img src="images/Logo-dark1.png">
+<img src="images/Logo-light-1.png">
+
+</section>
 </body>
 </html>
