update to mainpage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <ul>
         <li><a href="17.2-activities/01_Containers_Structure/unsolved/index.html">Containers and Structures</a>
         </li>
-        <li><a href="17.1_activities/17.1_unsolved/MyFirstHTML/hello.html">Hello World!</a>
+        <li><a href="17.2-activities/02_BoxModel/unsolved/index.html">Box Model</a>
+        </li>
+        <li><a href="17.2-activities/03_Style-Our-Styleguide/unsolved/index.html">Style Guide</a>
+        </li>
+        <li><a href="17.2-activities/04_Add-A-Custom-Font/unsolved/index.html">Custom Font</a>
         </li>
     </ul>   
     <h2>17.3</h2>
