updated main page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
         <li><a href="17.2-activities/04_Add-A-Custom-Font/unsolved/index.html">Custom Font</a>
         </li>
     </ul>   
+
     <h2>17.3</h2>
+    <ul>
+        <li><a href="17.3_activities/01_Positioning_Elements/1_floats/unsolved/index.html">Positioning: Floats</a>
+        </li>
+        <li><a href="17.3_activities/01_Positioning_Elements/2_block_and_inline_elements/unsolved/index.html">Positioning: Block & Inline</a>
+        </li>
+        <li><a href="17.3_activities/02_Positioning_Relative_Absolute/unsolved/index.html">Positioning: Relative & Absolute</a>
+        </li>
+    </ul>
 
     <h2>18.1</h2>
     <ul>
@@ -39,7 +48,6 @@
         </li>
         <li><a href="18.1-activities/03_Jakes_Eatery/unsolved/index.html">Jakes Eatery</a>
         </li>
-        
     </ul>
 </body>
 </html>
