--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
         <li><a href="18.1-activities/03_Jakes_Eatery/unsolved/index.html">Jakes Eatery</a>
         </li>
     </ul>
+
+    <h2>18.2</h2>
+    <ul>
+        <li><a href="18.2-activities/unsolved/index.html">CSS Grid Layouts</a>
+        </li>
+    </ul>
 </body>
 </html>
