--- a/19.1-activities/01_Hello_World_Again/unsolved/index.html
+++ b/19.1-activities/01_Hello_World_Again/unsolved/index.html
@@ -2,8 +2,6 @@
 <html>
   <head></head>
   <body>
-
-    <!-- Add the script tag to your index.js file below! -->
-    
+    <script src="js/index.js"></script>
   </body>
 </html>
