--- a/19.1-activities/05_Build_a_toggle/unsolved/index.html
+++ b/19.1-activities/05_Build_a_toggle/unsolved/index.html
@@ -5,7 +5,19 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 </head>
 <body>
+    <div class="container">
 
+      <div id="toggle">
+        <p>More <img src="images/downArrow@2x.png">
+        </p>
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+        </ul>
+      </div>
+    </div> 
+  </div>
     <!-- Add HTML structure Here -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
