--- a/Bootstrap_Components/Unsolved/index.html
+++ b/Bootstrap_Components/Unsolved/index.html
@@ -7,7 +7,7 @@
 
     <!-- Add Bootstrap CSS Here on line 10-->
     <!-- This is REQUIRED for bootstrap to work correctly -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- This stylesheet is an example of how you can add your own stylesheet to customize bootstrap components. Notice how it is loaded 2nd to the required bootstrap stylesheet. This is so our stylesheet will overwrite bootstrap classes when we apply the same class but different styles to the stylsheet -->
     <link rel="stylesheet" href="css/index.css">
 
@@ -15,13 +15,123 @@
   </head>
   <body>
     <!-- Paste Navigation Code Below -->
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
     <!-- Paste Jumbotron Code Below-->
-
+    <div class="jumbotron">
+      <h1 class="display-4">Hello, world!</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
     <!-- Add columns, rows, and cards Below -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <img src="images/1_card.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
 
+       <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <img src="images/2_card.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+       </div>
+
+       <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <img src="images/3_card.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+       </div>
+
+       <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <img src="images/4_card.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+       </div>
+
+    </div>
+  </div>
+ 
     <!-- Add form group below -->
 
+    <h2>Nested Example</h2>
+  <div class="container">
+    <div class="row">
+      <div class="portfolio-item col-sm=12 col-md-6 col-lg-9">Div Number 1</div>
+      <div class="portfolio-item col-sm-12 col-md-6 col-lg-3">Div Number 2
+      <div class="container">
+        <div class="row">
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2a</div>
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2b</div>
+        </div>
+        <div class="row">
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2c</div>
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2d</div>
+        </div>
+        <div class="row">
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2e</div>
+          <div class="portfolio-item col-sm-12 col-md-6 col-lg-6">Div Number 2f</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
     <!-- Modal -->
 
     <!-- Optional JavaScript -->
