--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tracy's Class Activities</title>
 </head>
 <body>
     <h1>Class Activities</h1>
@@ -53,6 +53,58 @@
     <h2>18.2</h2>
     <ul>
         <li><a href="18.2-activities/unsolved/index.html">CSS Grid Layouts</a>
+        </li>
+    </ul>
+
+    <h2>18.3</h2>
+    <ul>
+        <li><a href="18.3-activities/01_transforms/unsolved/index.html">Transform</a>
+        </li>
+        <li><a href="18.3-activities/02_transitions/unsolved/index.html">Transitions</a>
+        </li>
+        <li><a href="18.3-activities/03_keyframes/unsolved/index.html">Key Frames</a>
+        </li>
+    </ul>
+
+    <h2>19.1</h2>
+    <ul>
+        <li><a href="19.1-activities/01_Hello_World_Again/unsolved/index.html">Hello World, Again!</a>
+        </li>
+        <li><a href="19.1-activities/02_More_Variables/unsolved/index.html">More Variables</a>
+        </li>
+        <li><a href="19.1-activities/03_Using_jQuery/unsolved/index.html">Using jQuery</a>
+        </li>
+        <li><a href="19.1-activities/04_on_function/unsolved/index.html">On Function</a>
+        </li>
+        <li><a href="19.1-activities/05_Build_a_toggle/">Build A Toggle</a>
+        </li>
+    </ul>
+
+    <h2>19.2</h2>
+    <ul>
+        <li><a href="19.2-activities/01_Conditionals/unsolved/index.html">Conditionals</a>
+        </li>
+        <li><a href="19.2-activities/02_theme_changer/unsolved/index.html">Theme Changer</a>
+        </li>
+        <li><a href="19.2-activities/03_todo_app/unsolved/index.html">To Do App</a>
+        </li>
+    </ul>
+
+    <h2>19.3</h2>
+    <ul>
+        <li><a href="Band_Animated/unsolved 2/index.html">Band Animated<a>
+        </li>
+    </ul>
+
+    <h2>20.1</h2>
+    <ul>
+        <li><a href="Bootstrap_Components/Unsolved/index.html">Bootstrap Components</a>
+        </li>
+    </ul>
+
+    <h2>20.2</h2>
+    <ul>
+        <li><a href="Bootstrap_Customize/Unsolved/index.html">Bootstrap Customize</a>
         </li>
     </ul>
 </body>
