--- a/Bootstrap_Customize/Unsolved/index.html
+++ b/Bootstrap_Customize/Unsolved/index.html
@@ -15,87 +15,89 @@
   <body>
 
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="customNav navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"><img src="images/acoustic-guitar.png">Rock Nation</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Venues <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Artists</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              Dropdown
+              Near You
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Venues</a>
+              <a class="dropdown-item" href="#">Artists</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Upcoming Acts</a>
             </div>
           </li>
+          <li class="nav-item dropdown">
+            <a class="btn btn-primary btn-lg navCTA" href="#" role="button">Buy Tickets</a>
+          </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
     <!-- End navigation bar -->
 
     <!-- Jumbotron -->
-    <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <div class="jumbotron rockBackground">
+      <div class="jumboCopy">
+        <h1 class="display-4">It's Time to Rock</h1>
+        <p class="lead">Rock Nation brings you the most headbanging shows on the planet. Click below to find tickets for your favorite bands</p>
+        <hr class="my-4">
+        <p>extra text that has no purpose</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Buy Tickets</a>
+      </div> 
     </div>
     <!-- End jumbotron -->
 
     <!-- Cards -->
-    <div class="container-fluid">
-      <div class="row">
+    <div class="container-fluid content">
+      <h2 class="sectionHeading">Shows Near You</h2>
+      <div class="row showsNear">
         <!-- Card 1 -->
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <div class="card">
-            <img src="images/1_card.png" class="card-img-top" alt="...">
+            <img src="images/show1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Melbourne, Australia</h5>
+              <p class="card-text">Come see Slipknot unlease their new album "We Are Not Your Kind"</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
             </div>
           </div>
         </div>
         <!-- End card 1 -->
 
         <!-- Card 2 -->
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <div class="card">
-            <img src="images/2_card.png" class="card-img-top" alt="...">
+            <img src="images/show2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Chicago, Illinois</h5>
+              <p class="card-text">Metallica finally returns to the big stage in Chicago, Illinois</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
             </div>
           </div>
         </div>
         <!-- End card 2 -->
 
         <!-- Card 3 -->
-        <div class="cardContainer col-lg-3 col-md-3 col-sm-6">
+        <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
           <div class="card">
-            <img src="images/3_card.png" class="card-img-top" alt="...">
+            <img src="images/show3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Long Beach, California</h5>
+              <p class="card-text">The Red Hot Chili Peppers take the stage at the Honda Center</p>
+              <a href="#" class="btn btn-primary">Buy Tickets</a>
             </div>
           </div>
         </div>
@@ -106,17 +108,18 @@
     <!-- End cards -->
 
     <!-- Content -->
-    <div class="container-fluid">
+    <div class="container-fluid content">
+      <h2 class="sectionHeading">Why we're better.</h2>
 
       <!-- Row 1 -->
-      <div class="row">
+      <div class="row valueProp">
         <div class="sideAccent">
         </div>
-        <div class="col-3">
+        <div class="col-3 imageContainer">
           <img src="images/assistance.png">
         </div>
         <div class="col-8">
-          <h3>Title 1</h3>
+          <h3>We are always here to help!</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet.
           </p>
@@ -126,12 +129,50 @@
       </div>
       <!-- End row 1 -->
 
+       <!-- Row 2 -->
+       <div class="row valueProp">
+        <div class="sideAccent">
+        </div>
+        <div class="col-3 imageContainer">
+          <img src="images/refund.png">
+        </div>
+        <div class="col-8">
+          <h3>The best prices!</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet.
+          </p>
+          <a href="#" class="btn btn-primary">Learn More
+          </a>
+        </div>
+      </div>
+      <!-- End row 2 -->
+
+       <!-- Row 3 -->
+       <div class="row valueProp">
+        <div class="sideAccent">
+        </div>
+        <div class="col-3 imageContainer">
+          <img src="images/mail-box.png">
+        </div>
+        <div class="col-8">
+          <h3>The best shows!</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod Lorem ipsum dolor sit amet.
+          </p>
+          <a href="#" class="btn btn-primary">More Shows
+          </a>
+        </div>
+      </div>
+      <!-- End row 3 -->
+
+
     </div>
     <!-- End content -->
 
     <!-- Footer -->
-    <footer>
+    <footer class="emailContain">
       <form>
+        <h3>Join Our Mailing List</h3>
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
